[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Win_Scene.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Main_Menu = "res://Scenes/Main_Menu.tscn"
Doom_Tutorial = "res://Scenes/Doom_Tuturial.tscn"

[node name="Death_screen" type="Panel" parent="."]
margin_left = 375.502
margin_top = 193.0
margin_right = 907.502
margin_bottom = 508.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="Label" parent="Death_screen"]
margin_left = 185.0
margin_top = 180.508
margin_right = 337.0
margin_bottom = 265.508
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Death_screen"]
margin_left = 60.0
margin_top = 39.498
margin_right = 330.0
margin_bottom = 121.498
rect_scale = Vector2( 1.5, 1.5 )
text = "The slayer, kills the pinky
ending the immediate threat to 
humanity. In the distance the slayer hears
the call of more demons
This is only the beginning"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Start_Over" type="Button" parent="Death_screen"]
margin_left = 17.0
margin_top = 269.0
margin_right = 127.0
margin_bottom = 309.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Start Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Main_Menu" type="Button" parent="Death_screen"]
margin_left = 109.0
margin_top = 268.0
margin_right = 190.0
margin_bottom = 308.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Main Menu"

[connection signal="pressed" from="Death_screen/Button_Start_Over" to="." method="_on_Button_Start_Over_pressed"]
[connection signal="pressed" from="Death_screen/Button_Main_Menu" to="." method="_on_Button_Main_Menu_pressed"]
